# vibedock

./: .env.example  .gitignore  CLAUDE.md  README.md  fileprocess.py  gap_summary.md  html_report_generator.py  main.py  pyproject.toml  qa_record.md  report.md  stage1_processor.py  stage2_processor.py  tech_stack_questionnaire.py
.claude/: settings.local.json
output/: VibeDock_智能学习路径_20250913_191412.html  VibeDock_智能学习路径_20250913_194649.html  VibeDock_智能学习路径_20250913_200204.html  tech_report_20250913_175955.html  tech_report_20250913_190508.html
output/anthropic-sdk-python/: content.txt  summary.txt  tree.txt
output/click/: content.txt  summary.txt  tree.txt
output/cpython/: summary.txt  tree.txt
output/gitingest/: content.txt  summary.txt  tree.txt
output/openai-python/: summary.txt  tree.txt
output/pandas/: summary.txt  tree.txt
output/python-dotenv/: content.txt  summary.txt  tree.txt
output/rich/: content.txt  summary.txt  tree.txt
src/vibedock/: __init__.py
vibehacks/: __init__.py  analyzer.py  cli.py  reporter.py
