[project]
name = "vibedock"
version = "0.1.0"
description = "Add your description here"

requires-python = ">=3.12"
dependencies = [
    "openai>=1.107.2",
    "pydantic>=2.11.8",
    "python-dotenv>=1.1.1",
    "rich>=14.1.0",
]

[project.scripts]
vibedock = "vibedock:main"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"
